--- a/2024-04-16/ema/web/package.json
+++ b/2024-04-16/ema/web/package.json
@@ -7,12 +7,14 @@
     "build": "gulp"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3"
   },
   "devDependencies": {
     "browser-sync": "^3.0.2",
     "gulp": "^5.0.0",
     "gulp-clean-css": "^4.3.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "hai-server": "^0.0.4"
   }
 }
