--- a/2024-05-23/f310/package.json
+++ b/2024-05-23/f310/package.json
@@ -16,7 +16,9 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-minify": "^3.1.0",
-    "gulp-replace": "^1.1.4"
+    "gulp-replace": "^1.1.4",
+    "mocha": "^10.4.0",
+    "puppeteer": "^22.10.0"
   },
   "type": "module"
 }
